--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </li>
 
           <li>
-            <a href="#blog" class="navbar-link" data-nav-link>AI Diagnosis</a>
+            <a href="#" class="navbar-link" data-nav-link>AI Diagnosis</a>
           </li>
 
           <li>
